Fix #104798: Slow frame-change with objects in the scenes collection

Avoid re-copying the scene when the scene is tagged for frame change.

For scenes with many objects scrubbing & jumping between first/last
caused noticeably worse performances.

Resolve by:

- Returning false from need_tag_cow_before_update when the recalc flag
  is ID_RECALC_FRAME_CHANGE.
- Change deg_graph_tag_parameters_if_needed to consider
  ID_RECALC_FRAME_CHANGE a clean flag.

Ref !104801